<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_list_items"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="2"
    tools:context="com.example.AndroidDevelopmentClass.Catalog.ListItemsActivity">

    <RadioButton
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/button_1_label"/>

    <CheckBox
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/button_2_label"
        android:id="@+id/chkbox"/>

    <Switch
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/enable_message"
        android:id="@+id/swtchbtn"/>

    <ImageButton
        android:layout_column="1"
        android:layout_row="1"
        android:background="@android:drawable/btn_star_big_on"
        android:contentDescription=""
        android:id="@+id/imageBtn"/>



</GridLayout>
